@@ -44,6 +44,7 @@ ToDo/Notes:
 	  fs/ntfs/attrib.[hc]::ntfs_attr_set() and switch
 	  fs/ntfs/logfile.c::ntfs_empty_logfile() to using it.
 	- Remove unnecessary casts from LCN_* constants.
+	- Implement fs/ntfs/runlist.c::ntfs_rl_truncate().
 
 2.1.19 - Many cleanups, improvements, and a minor bug fix.
 
